--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -1,6 +1,12 @@
 <nav ng-controller="NavbarCtrl" class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-3" ng-click="isCollapsed = !isCollapsed">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
       <a class="navbar-brand" href="/">World Cup</a>
     </div>
     <div class="hidden-xs">
@@ -23,5 +29,13 @@
         </li>
       </ul>
     </div>
+    <nav collapse="!isCollapsed">
+      <ul class="nav navbar-nav">
+        <li><a href="/" ng-click="isCollapsed = !isCollapsed">Bet</a></li>
+        <li><a href="/table" ng-click="isCollapsed = !isCollapsed">Table</a></li>
+        <li><a href="/rank" ng-click="isCollapsed = !isCollapsed">Rank</a></li>
+        <li><a href="/match" ng-click="isCollapsed = !isCollapsed">Match</a></li>
+      </ul>
+    </nav>
   </div>
 </nav>
