--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -10,12 +10,12 @@
         <span ng-bind="match.date | momentFormat:'HH:mm - dddd MMMM D YYYY'"></span>
       </div>
       <div class="row detail" ng-init="winner = match.homeScore == match.awayScore ? 'draw' : match.homeScore > match.awayScore ? 'home' : 'away'">
-        <a href="http://en.wikipedia.org/wiki/{{match.home.title}}_national_football_team" target="_blank" class="home col-md-5" ng-class="{ win: winner == 'home', lose: winner == 'away' }">
-          <div class="flag">
+        <div class="home col-md-5" ng-class="{ win: winner == 'home', lose: winner == 'away' }">
+          <a class="flag" href="http://en.wikipedia.org/wiki/{{match.home.title}}_national_football_team">
             <img ng-src="http://img.fifa.com/images/flags/4/{{match.home.key}}.png" alt="{{match.home.code}}">
-          </div>
+          </a>
           <div class="title" ng-bind="match.home.title"></div>
-        </a>
+        </div>
         <div class="result col-md-2">
           <form class="prediction" ng-init="homeScore = match.bets[0].homeScore; awayScore = match.bets[0].awayScore;">
             <input type="number" min="0" class="form-control" ng-disabled="$parent.isStarted(match.date)" ng-model="homeScore" ng-enter="$parent.bet(match.matchnum, homeScore, awayScore)">
@@ -28,12 +28,12 @@
             <span ng-bind="match.awayScore" ng-class="{ win: winner == 'away', lose: winner == 'home' }"></span>
           </div>
         </div>
-        <a href="http://en.wikipedia.org/wiki/{{match.away.title}}_national_football_team" target="_blank" class="away col-md-5"  ng-class="{ win: winner == 'away', lose: winner == 'home' }">
+        <div class="away col-md-5" ng-class="{ win: winner == 'away', lose: winner == 'home' }">
           <div class="title" ng-bind="match.away.title"></div>
-          <div class="flag">
+          <a class="flag" href="http://en.wikipedia.org/wiki/{{match.home.title}}_national_football_team">
             <img ng-src="http://img.fifa.com/images/flags/4/{{match.away.key}}.png" alt="{{match.away.code}}">
-          </div>
-        </a>
+          </a>
+        </div>
       </div>
     </li>
   </ul>
