--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -14,7 +14,7 @@
         <li ng-class="{active: isActive('/')}"><a href="/">Bet</a></li>
         <li ng-class="{active: isActive('/table')}"><a href="/table">Table</a></li>
         <li ng-class="{active: isActive('/rank')}"><a href="/rank">Rank</a></li>
-        <li ng-class="{active: isActive('/match')}"><a href="/match">Match</a></li>
+        <li ng-class="{active: isActive('/match')}" ng-if="currentUser.role == 'admin'"><a href="/match">Match</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li ng-class="{active: isActive('/login')}" ng-if="!currentUser"><a href="/login" ng-click="isCollapsed = !isCollapsed;">Login</a></li>
@@ -35,7 +35,7 @@
         <li><a href="/" ng-click="isCollapsed = !isCollapsed">Bet</a></li>
         <li><a href="/table" ng-click="isCollapsed = !isCollapsed">Table</a></li>
         <li><a href="/rank" ng-click="isCollapsed = !isCollapsed">Rank</a></li>
-        <li><a href="/match" ng-click="isCollapsed = !isCollapsed">Match</a></li>
+        <li ng-if="currentUser.role == 'admin'"><a href="/match" ng-click="isCollapsed = !isCollapsed">Match</a></li>
         <li ng-if="!currentUser"><a href="/login" ng-click="isCollapsed = !isCollapsed;">Login</a></li>
         <li ng-if="currentUser"><a href="/settings" ng-click="isCollapsed = !isCollapsed">Settings</a></li>
         <li ng-if="currentUser"><a href="" ng-click="logout(); isCollapsed = !isCollapsed;">Logout</a></li>
