--- a/app/views/partials/rank.html
+++ b/app/views/partials/rank.html
@@ -4,23 +4,13 @@
   <div class="col-xs-12 text-center">
     <div class="btn-group">
       <label class="btn btn-default" ng-model="mode" btn-radio="'Table'">Table</label>
-      <label class="btn btn-default" ng-model="mode" btn-radio="'Points Chart'">Chart</label>
-      <!-- <label class="btn btn-default" ng-model="mode" btn-radio="'Rank Chart'">Rank Chart</label> -->
+      <label class="btn btn-default" ng-model="mode" btn-radio="'Points Chart'">Points Chart</label>
+      <label class="btn btn-default" ng-model="mode" btn-radio="'Rank Chart'">Rank Chart</label>
     </div>
   </div>
   <div class="rank-wrapper">
-    <nvd3-line-chart
-      ng-if="mode == 'Points Chart' || mode == 'Rank Chart'"
-      data="mode == 'Points Chart' ? chartPoints : chartRank"
-      height="600"
-      showXAxis="true"
-      showYAxis="true"
-      tooltips="true"
-      interactive="true"
-      showLegend="true"
-      margin="{left:50,top:50,bottom:50,right:50}">
-      <svg></svg>
-    </nvd3-line-chart>
+    <highchart ng-if="mode == 'Points Chart'" config="chartPoints"></highchart>
+    <highchart ng-if="mode == 'Rank Chart'" config="chartRank"></highchart>
     <table ng-if="mode == 'Table'" class="table table-bordered rank-table">
       <thead>
         <tr>
