--- a/app/views/partials/rank.html
+++ b/app/views/partials/rank.html
@@ -4,8 +4,8 @@
   <div class="col-xs-12 text-center">
     <div class="btn-group">
       <label class="btn btn-default" ng-model="mode" btn-radio="'table'">Table</label>
-      <label class="btn btn-default" ng-model="mode" btn-radio="'points'">Historical Points</label>
-      <label class="btn btn-default" ng-model="mode" btn-radio="'ranking'">Historical Ranking</label>
+      <label class="btn btn-default" ng-model="mode" btn-radio="'points'">Points</label>
+      <label class="btn btn-default" ng-model="mode" btn-radio="'ranking'">Ranking</label>
     </div>
   </div>
   <div class="rank-wrapper">
