--- a/app/styles/_bet.scss
+++ b/app/styles/_bet.scss
@@ -58,7 +58,7 @@
       text-transform: uppercase;
       line-height: 48px;
       max-width: 250px;
-      vertical-align: middle;
+      vertical-align: top;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
@@ -75,11 +75,9 @@
 
     .lose {
       font-weight: 300;
-      img {
-        filter: gray; /* IE6-9 */
-        -webkit-filter: grayscale(100%);
-        opacity: .7;
-      }
+      filter: gray;
+      -webkit-filter: grayscale(100%);
+      opacity: .7;
     }
 
     .result {
@@ -89,6 +87,8 @@
         display: inline;
         width: 50px;
         text-align: right;
+        padding-left: 0;
+        padding-right: 0;
       }
     }
   }
