--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,3 +29,12 @@ body {
 .navbar-default {
   background-color: #fff;
 }
+
+.notification {
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  z-index: 9999;
+  width: 570px;
+  margin-left: -285px;
+}
