--- a/app/views/partials/match.html
+++ b/app/views/partials/match.html
@@ -1,6 +1,10 @@
 <div ng-include="'partials/navbar'"></div>
 
 <div class="container wrapper">
+  <alert class="notification" type="info" ng-init="showAlert = true" ng-show="showAlert" close="showAlert = false">
+    <h4>Thank you for participating TRIAL version of Analytics World Cup!</h4>
+    <p>The real show starts here!</p>
+  </alert>
   <ul class="list-unstyled bet-card">
     <li class="match-header" ng-repeat-start="match in matches | orderBy:'date'" ng-if="showHeader(match.date, $last)">
       <h4 ng-init="day = $parent.getMatchDay(currentGroup);" ng-bind="'Day ' + day" id="'day' + day"></h4>
