--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -2,7 +2,7 @@
 
 <div class="container wrapper">
   <alert class="notification" type="info" ng-init="showAlert = true" ng-show="showAlert" close="showAlert = false">
-    <h4>Thank you for participating TRIAL version of Analytics World Cup!</h4>
+    <h4>TRIAL version is over!</h4>
     <p>The real show starts here!</p>
   </alert>
   <ul class="list-unstyled bet-card">
