--- a/app/views/partials/table.html
+++ b/app/views/partials/table.html
@@ -2,7 +2,7 @@
 
 <div class="wrapper full-container">
   <alert class="notification" type="info" ng-init="showAlert = true" ng-show="showAlert" close="showAlert = false">
-    <h4>Thank you for participating TRIAL version of Analytics World Cup!</h4>
+    <h4>TRIAL version is over!</h4>
     <p>The real show starts here!</p>
   </alert>
   <div class="prediction-table" ng-if="loaded" ng-grid="gridOptions"></div>
